# hotsauce-ratings

./: readme.md
backend/: .gitignore  Cargo.toml  config.toml
backend/api/: Cargo.toml
backend/api/src/: auth.rs  error.rs  main.rs  manufacturer.rs  profile.rs  sauce.rs
backend/entity/: Cargo.toml
backend/entity/src/: lib.rs  manufacturer.rs  prelude.rs  rating_axis.rs  review.rs  review_rating.rs  sauce.rs  seaql_migrations.rs  used_nonce.rs  user.rs  user_google_login.rs
backend/migration/: Cargo.toml
backend/migration/src/: lib.rs  m001_create_user_tables.rs  m002_create_sauce_tables.rs  m003_create_ratings_tables.rs  m20220623_000001_create_tables.rs  main.rs
backend/migrations/: 01_schema.sql
backend/src/: main.rs
backend/src/model/: manufacturer.rs  mod.rs  prelude.rs  rating_axis.rs  review.rs  review_rating.rs  sauce.rs  user.rs
backend/testing_data/: Cargo.toml
backend/testing_data/src/: main.rs
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.vue  main.js
frontend/src/components/: IndexNav.vue  IndexNavButton.vue  IndexNavLink.vue  LoadingSpinner.vue  SauceCard.vue
frontend/src/views/: About.vue  AcceptGoogleLogin.vue  Home.vue  Login.vue  Profile.vue  ReviewSubmit.vue  Sauces.vue  Signup.vue
