[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.58"
axum = "0.5.8"
env_logger = "0.9.0"
log = "0.4.17"
sea-orm = { version = "0.8.0", features = ["sqlx-sqlite", "runtime-tokio-rustls", "macros"] }
serde = { version = "1.0.137", features = ["derive"] }
sqlx = { version = "0.6.0", features = ["sqlite", "runtime-tokio-rustls"] }
thiserror = "1.0.31"
tokio = { version = "1.19.2", features = ["rt", "macros"] }
tower = { version = "0.4.13", features = ["timeout"] }
tower-http = { version = "0.3.4", features = ["cors"] }


entity = { path = "../entity" }