[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
entity = { path = "../entity" }

anyhow = "1.0.58"
axum = { version = "0.5.9", features = ["form"] }
axum-extra = { version = "0.3.4", features = ["cookie", "cookie-private", "cookie-signed"] }
dotenv = "0.15.0"
env_logger = "0.9.0"
jsonwebtoken = "8.1.1"
log = "0.4.17"
reqwest = { version = "0.11.11", features = ["blocking", "json"] }
sea-orm = { version = "0.8.0", features = ["sqlx-sqlite", "runtime-tokio-rustls", "macros"] }
serde = { version = "1.0.137", features = ["derive"] }
sqlx = { version = "0.6.0", features = ["sqlite", "runtime-tokio-rustls"] }
thiserror = "1.0.31"
tokio = { version = "1.19.2", features = ["rt", "macros"] }
tower = { version = "0.4.13", features = ["timeout"] }
tower-http = { version = "0.3.4", features = ["trace"] }
chrono = { version = "0.4.19", features = ["serde"] }
serde_json = "1.0.81"
