[package]
name = "migration"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "migration"
path = "src/lib.rs"

[dependencies]
entity = { path = "../entity" }
tokio = { version = "1.19.2", features = ["macros", "rt"] }

sea-orm-migration = { version = "^0.8.0", features = ["sqlx-sqlite", "runtime-tokio-rustls" ] }
dotenv = "0.15.0"
