[package]
name = "testing_data"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.64"
chrono = "0.4.22"
entity = { path = "../entity" }
env_logger = "0.9.0"
lipsum = "0.8.2"
rand = "0.8.5"
sea-orm = "0.8.0"
tokio = { version = "1.21.0", features = ["rt", "macros"] }
